--- a/src/BusinessLogic/Resources/lang/it.json
+++ b/src/BusinessLogic/Resources/lang/it.json
@@ -18,12 +18,12 @@
     "saveChanges": "Salva le modifiche",
     "accept": "Accetto",
     "cancel": "Annulla",
-    "continue": "",
-    "complete": "",
-    "add": "",
-    "edit": "",
-    "delete": "",
-    "discard": ""
+    "continue": "Continua",
+    "complete": "Completi",
+    "add": "Aggiungi",
+    "edit": "Modifica",
+    "delete": "Elimina",
+    "discard": "Scarta"
   },
   "validation": {
     "requiredField": "Questo campo è obbligatorio.",
@@ -31,45 +31,45 @@
     "invalidEmail": "Il campo deve essere un email valido.",
     "shortPassword": "La password deve contenere almeno %s caratteri.",
     "invalidPhone": "Questo campo deve contenere un numero di telefono valido.",
-    "maxLength": "",
+    "maxLength": "Il campo non può contenere più di %s caratteri.",
     "numeric": "Questo valore deve essere numerico.",
-    "greaterThanZero": "",
-    "nonNegative": "",
+    "greaterThanZero": "Il valore deve essere maggiore di 0.",
+    "nonNegative": "Il campo non può avere un valore negativo.",
     "numberOfDecimalPlaces": "Il campo deve contenere due decimali.",
     "integer": "Il campo deve essere un numero intero.",
     "invalidCountryList": "Devi selezionare i paesi di destinazione.",
-    "invalidLanguage": "",
-    "invalidPlatformCountry": "",
-    "invalidUrl": "",
-    "invalidFieldValue": "",
-    "invalidMaxValue": ""
+    "invalidLanguage": "Il campo non contiene una lingua valida.",
+    "invalidPlatformCountry": "Il campo non contiene un paese della piattaforma valido.",
+    "invalidUrl": "Il campo deve contenere un URL valido.",
+    "invalidFieldValue": "Il campo deve essere impostato su \"%s\".",
+    "invalidMaxValue": "Il valore massimo consentito è %s."
   },
   "login": {
     "apiKey": "API Key",
     "apiKeyIncorrect": "API Key non corretta",
-    "dontHaveAccount": "",
-    "welcome": "",
-    "connectYourService": "",
-    "validateApiKey": "",
-    "chooseYourCountry": "",
-    "registerMe": ""
+    "dontHaveAccount": "Non hai un account?",
+    "welcome": "Benvenuto a Packlink PRO",
+    "connectYourService": "Usa la chiave per collegare il tuo servizio. La troverai nella sezione <br><strong>\"Chiave API Packlink Pro\"</strong> delle <strong>\"Impostazioni\"</strong>.",
+    "validateApiKey": "Convalida la chiave API",
+    "chooseYourCountry": "Per iniziare la registrazione, scegli il tuo paese",
+    "registerMe": "Iscriviti"
   },
   "register": {
-    "logIn": "",
-    "email": "",
+    "logIn": "Accedi",
+    "email": "Email",
     "password": "Password",
-    "haveAccount": "",
+    "haveAccount": "Hai già un account?",
     "startEnjoying": "Inizia a usufruire di Packlink PRO!",
     "registerAccount": "Registrati",
     "getToKnowYou": "Vogliamo conoscerti meglio per adattarci a te e preparare una proposta personalizzata per te",
     "monthlyShipmentVolume": "Quante spedizioni fai solitamente al mese?",
-    "phone": "",
+    "phone": "Numero di telefono",
     "termsAndConditions": "<pre>Accetto i <a href=\"%s\" target=\"_blank\">Termini del servizio</a> e l’<a href=\"%s\" target=\"_blank\">Informativa sulla privacy</a> di Packlink</pre>",
     "marketingEmails": "Autorizzo Packlink Shipping S.L. a inviarmi comunicazioni commerciali via email",
     "submit": "Registrati",
-    "chooseYourCountry": "",
-    "searchCountry": "",
-    "invalidDeliveryVolume": "",
+    "chooseYourCountry": "Scegli il paese",
+    "searchCountry": "Cerca paese",
+    "invalidDeliveryVolume": "Il campo non contiene un volume di consegna valido.",
     "ES": "Spain",
     "DE": "Germany",
     "FR": "France",
@@ -84,71 +84,71 @@
     "HU": "Hungary"
   },
   "onboardingWelcome": {
-    "header": "",
-    "steps": "",
-    "stepOne": "",
-    "stepTwo": "",
-    "startSetUp": ""
+    "header": "È necessario impostare alcuni dati di base così che<br>potrai effettuare spedizioni",
+    "steps": "Si tratta di due semplici passaggi che dobbiamo completare per offrirti la<br>compagnia di trasporto che più si adatta alle tue esigenze",
+    "stepOne": "Imposta i dettagli del pacco",
+    "stepTwo": "Imposta l’indirizzo del mittente",
+    "startSetUp": "Avvia la configurazione"
   },
   "onboardingOverview": {
-    "header": "",
-    "parcelDetails": "",
-    "senderAddress": "",
-    "missingInfo": "",
+    "header": "Ci siamo quasi! Per continuare, verifica che i dati inseriti siano corretti o completali.",
+    "parcelDetails": "Dettagli del pacco",
+    "senderAddress": "Indirizzo del mittente",
+    "missingInfo": "Dati mancanti",
     "parcelData": "Peso %s kg | Altezza %s cm | Largezza %s cm | Lunghezza %s cm",
     "warehouseData": "%s | %s | %s"
   },
   "defaultParcel": {
-    "title-onboarding": "",
-    "description-onboarding": "",
-    "title-config": "",
-    "description-config": "",
+    "title-onboarding": "1. Imposta i dettagli del pacco",
+    "description-onboarding": "Useremo questi dati predefiniti per gli <strong>articoli per cui non vengono specificate le dimensioni e il peso.</strong> Puoi modificarli quando vuoi dalla scheda delle impostazioni.",
+    "title-config": "Pacco predefinito",
+    "description-config": "Useremo questi dati per <strong>articoli privi di dimensioni e peso definiti.</strong>",
     "weight": "Peso",
     "height": "Altezza",
     "width": "Largezza",
     "length": "Lunghezza"
   },
   "defaultWarehouse": {
-    "title-onboarding": "",
-    "description-onboarding": "",
-    "title-config": "",
-    "description-config": "",
-    "alias": "",
-    "alias-placeholder": "",
+    "title-onboarding": "2. Imposta l’indirizzo del mittente",
+    "description-onboarding": "Useremo questo indirizzo per creare <strong>un mittente predefinito per tutte le spedizioni.</strong> Potrai modificarlo ogni volta che vuoi dalla scheda delle impostazioni.",
+    "title-config": "Indirizzo del mittente predefinito",
+    "description-config": "Useremo questo indirizzo per creare <strong>un mittente predefinito per tutte le spedizioni.</strong> Potrai modificarlo ogni volta che vuoi.",
+    "alias": "Nome del mittente",
+    "alias-placeholder": "Magazzino principale",
     "name": "Nome della persona di contatto",
-    "name-placeholder": "",
+    "name-placeholder": "Nome",
     "surname": "Cognome della persona di contatto",
-    "surname-placeholder": "",
+    "surname-placeholder": "cognome",
     "company": "Nome dell'azienda",
-    "company-placeholder": "",
-    "country": "",
+    "company-placeholder": "Azienda",
+    "country": "Paese",
     "postal_code": "Città o codice postale",
     "postal_code-placeholder": "-",
     "address": "Indirizzo",
-    "address-placeholder": "",
+    "address-placeholder": "Indirizzo",
     "phone": "Numero di telefono",
-    "phone-placeholder": "",
+    "phone-placeholder": "123 456 7777",
     "email": "Email",
-    "email-placeholder": ""
+    "email-placeholder": "latuaemail@esempio.com"
   },
   "configuration": {
-    "menu": "",
-    "title": "",
-    "orderStatus": "",
-    "warehouse": "",
+    "menu": "Impostazioni",
+    "title": "Impostazioni",
+    "orderStatus": "Stato dell’ordine",
+    "warehouse": "Indirizzo del mittente predefinito",
     "parcel": "Pacco predefinito",
     "help": "Aiuto",
     "contactUs": "Contattaci:",
     "systemInfo": "Informazioni del sistema"
   },
   "systemInfo": {
-    "title": "",
+    "title": "File di informazioni del sistema <br>e modalità debug",
     "debugMode": "Debug mode",
     "download": "Scarica il file di informazioni del sistema"
   },
   "orderStatusMapping": {
-    "title": "",
-    "description": "",
+    "title": "Stato dell’ordine",
+    "description": "Con Packlink, puoi aggiornare lo stato dell’ordine %s con i dati della spedizione. <br>Puoi modificarlo ogni volta che vuoi.",
     "packlinkProShipmentStatus": "STATO DELLA <strong>SPEDIZIONE</strong> di Packlink PRO",
     "systemOrderStatus": "STATO DELLA <strong>SPEDIZIONE</strong> di %s",
     "none": "Nessuno",
@@ -160,25 +160,25 @@
     "cancelled": "Annullato"
   },
   "shippingServices": {
-    "myServices": "",
-    "noServicesTitle": "",
-    "noServicesDescription": "",
-    "addService": "",
-    "addNewService": "",
-    "addedSuccessTitle": "",
-    "addedSuccessDescription": "",
-    "deletedSuccessTitle": "",
-    "deletedSuccessDescription": "",
-    "disableCarriersTitle": "",
-    "disableCarriersDescription": "",
+    "myServices": "I miei servizi di spedizione",
+    "noServicesTitle": "Dovrai solo aggiungere i tuoi servizi di spedizione",
+    "noServicesDescription": "Questi saranno mostrati al cliente al momento del pagamento, per consentirgli di scegliere la compagnia di trasporto che effettuerà la consegna del pacco. Configurali adesso e non dovrai più preoccuparti di nulla. Puoi modificarli ogni volta che vuoi, per aggiornare o rinnovare i servizi di spedizione.",
+    "addService": "Aggiungi servizio",
+    "addNewService": "Aggiungi nuovo servizio",
+    "addedSuccessTitle": "Il servizio di spedizione è stato aggiunto",
+    "addedSuccessDescription": "Puoi modificare il servizio dalla sezione <strong>\"I miei servizi\"</strong>.",
+    "deletedSuccessTitle": "Il servizio di spedizione è stato eliminato",
+    "deletedSuccessDescription": "Puoi aggiungere nuovi servizi tramite il pulsante <strong>\"Aggiungi nuovo servizio\"</strong>.",
+    "disableCarriersTitle": "Hai creato il tuo primo servizio di spedizione. Vuoi disattivare le compagnie di trasporto precedenti?",
+    "disableCarriersDescription": "Per garantirti un servizio migliore, è importante <strong>disattivare le compagnie di trasporto</strong> utilizzati in precedenza.",
     "successfullyDisabledShippingMethods": "Servizi di spedizione disattivati correttamente.",
     "failedToDisableShippingMethods": "Impossibile disattivare i servizi di spedizione.",
-    "pickShippingService": "",
-    "failedGettingServicesTitle": "",
-    "failedGettingServicesSubtitle": "",
-    "retry": "",
-    "filterModalTitle": "",
-    "applyFilters": "",
+    "pickShippingService": "Aggiungi servizi di consegna",
+    "failedGettingServicesTitle": "Si è verificato un problema durante l’acquisizione dei servizi di spedizione",
+    "failedGettingServicesSubtitle": "Vuoi riprovare?",
+    "retry": "Riprova",
+    "filterModalTitle": "Filtri",
+    "applyFilters": "Applica i filtri",
     "type": "Tipo",
     "national": "Nazionale",
     "international": "Internazionale",
@@ -194,57 +194,57 @@
     "carrierLogo": "Logo del corriere",
     "carrier": "Corriere",
     "serviceTitle": "Titolo del servizio",
-    "serviceTitleDescription": "",
+    "serviceTitleDescription": "Modifica le tue spedizioni per personalizzarle. Queste informazioni saranno visualizzate dai tuoi clienti.",
     "transitTime": "Tempi di transito",
     "origin": "Origine",
     "destination": "Destinazione",
-    "myPrices": "",
+    "myPrices": "I miei prezzi",
     "packlinkPrices": "Prezzi di Packlink",
-    "configureService": "",
+    "configureService": "Configura il servizio",
     "showCarrierLogo": "Mostra logo del corriere ai miei clienti",
-    "pricePolicy": "",
-    "pricePolicyDescription": "",
-    "configurePricePolicy": "",
-    "taxClassTitle": "",
+    "pricePolicy": "Politica dei prezzi",
+    "pricePolicyDescription": "Per impostazione predefinita, <strong>saranno i prezzi di base di Packlink,</strong> ma puoi configurarli più dettagliatamente qui di seguito.",
+    "configurePricePolicy": "Configura i prezzi di spedizione",
+    "taxClassTitle": "Scegli la tua aliquota fiscale salvata",
     "tax": "Tassa",
-    "serviceCountriesTitle": "",
-    "serviceCountriesDescription": "",
-    "openCountries": "",
-    "allCountriesSelected": "",
-    "oneCountrySelected": "",
-    "selectedCountries": "",
-    "firstPricePolicyDescription": "",
-    "addFirstPolicy": "",
-    "addAnotherPolicy": "",
+    "serviceCountriesTitle": "Disponibilità per paese di destinazione",
+    "serviceCountriesDescription": "Seleziona la disponibilità per i paesi supportati per i tuoi servizi di spedizione.",
+    "openCountries": "Vedi i paesi",
+    "allCountriesSelected": "Tutti i paesi selezionati",
+    "oneCountrySelected": "Un paese selezionato",
+    "selectedCountries": "%s paesi selezionati",
+    "firstPricePolicyDescription": "Perfetto, mancano solo due passaggi:<br><br>1. Scegli se vuoi importarli per peso e/o prezzo di acquisto.<br><br>2. Scegli una politica dei prezzi e configurala.",
+    "addFirstPolicy": "Aggiungi regola di prezzo",
+    "addAnotherPolicy": "Aggiungi un’altra regola",
     "from": "Da",
     "to": "A",
     "price": "Prezzo",
-    "rangeTypeExplanation": "",
-    "rangeType": "",
-    "priceRange": "",
-    "priceRangeWithData": "",
-    "weightRange": "",
-    "weightRangeWithData": "",
-    "weightAndPriceRange": "",
-    "weightAndPriceRangeWithData": "",
-    "singlePricePolicy": "",
-    "pricePolicyExplanation": "",
-    "packlinkPrice": "",
-    "percentagePacklinkPrices": "",
-    "percentagePacklinkPricesWithData": "",
-    "fixedPrices": "",
-    "fixedPricesWithData": "",
-    "increaseExplanation": "",
-    "reduceExplanation": "",
+    "rangeTypeExplanation": "1. Scegli se vuoi importarli per peso e/o prezzo di acquisto.",
+    "rangeType": "Tipo di range",
+    "priceRange": "Range di prezzo",
+    "priceRangeWithData": "Range di prezzo: da %s€ a %s€",
+    "weightRange": "Range di peso",
+    "weightRangeWithData": "Range di peso: da %s kg a %s kg",
+    "weightAndPriceRange": "Range di prezzo e di peso",
+    "weightAndPriceRangeWithData": "Range di prezzo e di peso: da %s kg a %s kg e da %s€ a %s€",
+    "singlePricePolicy": "Politica dei prezzi %s",
+    "pricePolicyExplanation": "2. Scegli una politica dei prezzi e configurala.",
+    "packlinkPrice": "Prezzo di Packlink",
+    "percentagePacklinkPrices": "% dei prezzi di Packlink",
+    "percentagePacklinkPricesWithData": "% dei prezzi di Packlink: %s del %s%",
+    "fixedPrices": "Prezzo fisso",
+    "fixedPricesWithData": "Prezzo fisso: %s€",
+    "increaseExplanation": "Incremento sul prezzo: aggiungi una % al prezzo, che sarà pagata dal cliente.",
+    "reduceExplanation": "Riduzione sul prezzo: deduci una % dal prezzo, che sarà pagata da te.",
     "select": "Sélectionner",
-    "invalidRange": "",
+    "invalidRange": "Range non valido",
     "increase": "Aumenta",
     "reduce": "Diminuisci",
-    "selectAllCountries": "",
-    "selectCountriesHeader": "",
-    "selectCountriesSubheader": "",
-    "usePacklinkRange": "",
-    "discardChangesQuestion": ""
+    "selectAllCountries": "Tutti i paesi selezionati",
+    "selectCountriesHeader": "Paesi supportati per il tuo <br> servizio di spedizione",
+    "selectCountriesSubheader": "Seleziona la disponibilità di almeno un paese e aggiungi <br> tutti quelli richiesti",
+    "usePacklinkRange": "Per tutti gli altri range, applica i prezzi di Packlink",
+    "discardChangesQuestion": "Alcune modifiche non sono state salvate.<br>Sei sicuro di voler tornare indietro e annullarle?"
   },
   "orderListAndDetails": {
     "packlinkOrderDraft": "Bozza dell'ordine Packlink",
