--- a/src/BusinessLogic/Resources/lang/es.json
+++ b/src/BusinessLogic/Resources/lang/es.json
@@ -23,7 +23,7 @@
     "add": "Añadir",
     "edit": "Editar",
     "delete": "Borrar",
-    "discard": ""
+    "discard": "Ignorar"
   },
   "validation": {
     "requiredField": "Esta campo es obligatorio.",
@@ -31,7 +31,7 @@
     "invalidEmail": "El campo debe ser un correo electrónico válido.",
     "shortPassword": "La contraseña debe contener %s caracteres como mínimo.",
     "invalidPhone": "Este campo deber ser un número de teléfono válido.",
-    "maxLength": "",
+    "maxLength": "Este campo no puede tener más de % caracteres.",
     "numeric": "Debe ser un valor numérico.",
     "greaterThanZero": "El valor debe ser mayor que 0.",
     "nonNegative": "Field cannot have a negative value.",
@@ -69,7 +69,7 @@
     "submit": "Regístrate",
     "chooseYourCountry": "Elige tu país",
     "searchCountry": "Busca el país",
-    "invalidDeliveryVolume": "",
+    "invalidDeliveryVolume": "El campo no contiene un volumen de entrega válido.",
     "ES": "España",
     "DE": "Alemania",
     "FR": "Francia",
@@ -87,7 +87,7 @@
     "header": "Vamos a configurar tu información básica <br> para poder hacer envíos",
     "steps": "Son solo dos pasos, los necesitamos para ofrecerte los servicios <br> de transporte que más se adaptan a tus necesidades.",
     "stepOne": "Configurar los detalles del paquete",
-    "stepTwo": "Configurar la dirección del remitente ",
+    "stepTwo": "Configurar la dirección del remitente",
     "startSetUp": "Comenzar con la configuración"
   },
   "onboardingOverview": {
@@ -109,7 +109,7 @@
     "length": "Largo"
   },
   "defaultWarehouse": {
-    "title-onboarding": "2. Configurar la dirección del remitente ",
+    "title-onboarding": "2. Configurar la dirección del remitente",
     "description-onboarding": "Utilizaremos esta dirección para crear un <strong>remitente por defecto que valga para todos los envíos.</strong> Podrás editarla cuando quieras desde la pestaña de configuración.",
     "title-config": "Dirección del remitente por defecto",
     "description-config": "Utilizaremos esta <strong>dirección para crear un remitente por defecto</strong> que valga para todos los envíos.",
@@ -167,16 +167,16 @@
     "addNewService": "Añadir nuevo servicio",
     "addedSuccessTitle": "Servicio de envío añadido correctamente",
     "addedSuccessDescription": "Podrás editarlo desde la sección <strong>\"Mis servicios\"</strong>.",
-    "deletedSuccessTitle": "",
-    "deletedSuccessDescription": "",
+    "deletedSuccessTitle": "Servicio de envío eliminado correctamente",
+    "deletedSuccessDescription": "Puedes añadir nuevos servicios con el botón <strong>\"Añadir nuevo servicio\"</strong>.",
     "disableCarriersTitle": "Has creado tu primer servicio de envío. ¿Quieres desabilitar los transportistas anteriores?",
     "disableCarriersDescription": "Para ofrecerte un mejor servicio, es importante <strong>desabilitar los transportistas</strong> que tenías previamente.",
     "successfullyDisabledShippingMethods": "Servicios de envío correctamente deseleccionados.",
     "failedToDisableShippingMethods": "Error al deshabilitar los servicios de envío.",
     "pickShippingService": "Añadir servicios de envío",
-    "failedGettingServicesTitle": "",
-    "failedGettingServicesSubtitle": "",
-    "retry": "",
+    "failedGettingServicesTitle": "Tenemos dificultades para obtener servicios de envío",
+    "failedGettingServicesSubtitle": "¿Quieres volverlo a intentar?",
+    "retry": "Volver a intentar",
     "filterModalTitle": "Filtros",
     "applyFilters": "Aplicar",
     "type": "Tipo",
@@ -237,14 +237,14 @@
     "increaseExplanation": "Incrementar: añade un % al precio, lo pagará el cliente.",
     "reduceExplanation": "Reducir: descuenta un % al precio, lo pagarás tú.",
     "select": "Elige",
-    "invalidRange": "",
+    "invalidRange": "Rango no válido",
     "increase": "incrementar",
     "reduce": "reducir",
     "selectAllCountries": "Selecionar todos los países",
     "selectCountriesHeader": "Países permitidos para tu servicio <br> de envío",
     "selectCountriesSubheader": "Selecciona la disponibilidad de al menos un país y <br> añade tantos como necesites",
     "usePacklinkRange": "Para el resto de rangos, aplicar precios Packlink",
-    "discardChangesQuestion": ""
+    "discardChangesQuestion": "Algunos cambios no se han guardado.<br>¿Estás seguro de que quieres volver e ignorar los cambios?"
   },
   "orderListAndDetails": {
     "packlinkOrderDraft": "Borrador del pedido de Packlink",
