Fix countries selection validation
Issue: PLCR1801-91

--- a/src/BusinessLogic/Resources/lang/en.json
+++ b/src/BusinessLogic/Resources/lang/en.json
@@ -244,7 +244,8 @@
     "selectCountriesHeader": "Countries supported for your <br> shipping service",
     "selectCountriesSubheader": "Select availability of at least one country and add <br> as many required",
     "usePacklinkRange": "For all other ranges, apply Packlink prices",
-    "discardChangesQuestion": "There are unsaved changes.<br>Are you sure you want to go back and discard them?"
+    "discardChangesQuestion": "There are unsaved changes.<br>Are you sure you want to go back and discard them?",
+    "atLeastOneCountry": "At least one country must be selected."
   },
   "orderListAndDetails": {
     "packlinkOrderDraft": "Packlink order draft",
