--- a/src/BusinessLogic/Resources/lang/it.json
+++ b/src/BusinessLogic/Resources/lang/it.json
@@ -244,7 +244,8 @@
     "selectCountriesHeader": "",
     "selectCountriesSubheader": "",
     "usePacklinkRange": "",
-    "discardChangesQuestion": ""
+    "discardChangesQuestion": "",
+    "atLeastOneCountry": ""
   },
   "orderListAndDetails": {
     "packlinkOrderDraft": "Bozza dell'ordine Packlink",
