--- a/src/BusinessLogic/Resources/lang/de.json
+++ b/src/BusinessLogic/Resources/lang/de.json
@@ -178,7 +178,7 @@
     "failedGettingServicesSubtitle": "Möchten Sie es erneut versuchen?",
     "retry": "Erneut versuchen",
     "filterModalTitle": "Filter",
-    "applyFilters": "Filter anwenden",
+    "applyFilters": "Anwenden",
     "type": "Typ",
     "national": "National",
     "international": "International",
