--- a/src/BusinessLogic/Resources/lang/en.json
+++ b/src/BusinessLogic/Resources/lang/en.json
@@ -178,7 +178,7 @@
     "failedGettingServicesSubtitle": "Do you want to retry?",
     "retry": "Retry",
     "filterModalTitle": "Filters",
-    "applyFilters": "Apply filters",
+    "applyFilters": "Apply",
     "type": "Type",
     "national": "Domestic",
     "international": "International",
