--- a/src/BusinessLogic/Resources/lang/fr.json
+++ b/src/BusinessLogic/Resources/lang/fr.json
@@ -178,7 +178,7 @@
     "failedGettingServicesSubtitle": "Souhaitez-vous réessayer ?",
     "retry": "Réessayer",
     "filterModalTitle": "Filtres",
-    "applyFilters": "Appliquer les filtres",
+    "applyFilters": "Appliquer",
     "type": "Type",
     "national": "National",
     "international": "International",
