--- a/src/BusinessLogic/Resources/lang/it.json
+++ b/src/BusinessLogic/Resources/lang/it.json
@@ -178,7 +178,7 @@
     "failedGettingServicesSubtitle": "Vuoi riprovare?",
     "retry": "Riprova",
     "filterModalTitle": "Filtri",
-    "applyFilters": "Applica i filtri",
+    "applyFilters": "Applica",
     "type": "Tipo",
     "national": "Nazionale",
     "international": "Internazionale",
