Fix translation issue in italian
ISSUE CS-1258

--- a/src/BusinessLogic/Resources/lang/it.json
+++ b/src/BusinessLogic/Resources/lang/it.json
@@ -189,8 +189,8 @@
     "collection": "Ritiro a domicilio",
     "dropoff": "Ritiro in punto corriere",
     "parcelDestination": "Destinazione pacco",
-    "pickup": "Consegna al domicilio",
-    "delivery": "Consegna in punto corriere",
+    "pickup": "Consegna in punto corriere",
+    "delivery": "Consegna al domicilio",
     "carrierLogo": "Logo del corriere",
     "carrier": "Corriere",
     "serviceTitle": "Titolo del servizio",
