Implement warehouse country service
ISSUE: PLCR25-6

--- a/src/BusinessLogic/Resources/lang/de.json
+++ b/src/BusinessLogic/Resources/lang/de.json
@@ -54,6 +54,30 @@
     "chooseYourCountry": "Wählen Sie Ihr Land aus, um mit der Registrierung beginnen zu können",
     "registerMe": "Registrieren"
   },
+  "countries": {
+    "ES": "Spanien",
+    "DE": "Deutschland",
+    "FR": "Frankreich",
+    "IT": "Italien",
+    "AT": "Österreich",
+    "NL": "Niederlande",
+    "BE": "Belgien",
+    "PT": "Portugal",
+    "TR": "Türkei",
+    "IE": "Irland",
+    "GB": "Vereinigtes Königreich",
+    "HU": "Ungarn",
+    "PL": "Polen",
+    "CH": "Schweiz",
+    "LU": "Luxemburg",
+    "AR": "Argentinien",
+    "US": "Vereinigte Staaten",
+    "BO": "Bolivien",
+    "MX": "Mexiko",
+    "CL": "Chile",
+    "CZ": "Tschechien",
+    "SE": "Schweden"
+  },
   "register": {
     "logIn": "Einloggen",
     "email": "E-Mail",
@@ -69,19 +93,7 @@
     "submit": "Registrieren",
     "chooseYourCountry": "Wählen Sie Ihr Land aus",
     "searchCountry": "Land suchen",
-    "invalidDeliveryVolume": "Das Feld enthält keinen gültigen Lieferumfang.",
-    "ES": "Spain",
-    "DE": "Germany",
-    "FR": "France",
-    "IT": "Italy",
-    "AT": "Austria",
-    "NL": "Netherlands",
-    "BE": "Belgium",
-    "PT": "Portugal",
-    "TR": "Turkey",
-    "IE": "Ireland",
-    "GB": "Great Britain",
-    "HU": "Hungary"
+    "invalidDeliveryVolume": "Das Feld enthält keinen gültigen Lieferumfang."
   },
   "onboardingWelcome": {
     "header": "Richten Sie nun die grundlegenden Informationen ein, damit Sie Versendungen vornehmen können",
