--- a/src/BusinessLogic/Resources/lang/en.json
+++ b/src/BusinessLogic/Resources/lang/en.json
@@ -54,6 +54,30 @@
     "chooseYourCountry": "Choose your country to start the registration process",
     "registerMe": "Register me"
   },
+  "countries": {
+    "ES": "Spain",
+    "DE": "Germany",
+    "FR": "France",
+    "IT": "Italy",
+    "AT": "Austria",
+    "NL": "Netherlands",
+    "BE": "Belgium",
+    "PT": "Portugal",
+    "TR": "Turkey",
+    "IE": "Ireland",
+    "GB": "Great Britain",
+    "HU": "Hungary",
+    "PL": "Poland",
+    "CH": "Switzerland",
+    "LU": "Luxembourg",
+    "AR": "Argentina",
+    "US": "United States",
+    "BO": "Bolivia",
+    "MX": "Mexico",
+    "CL": "Chile",
+    "CZ": "Czech Republic",
+    "SE": "Sweden"
+  },
   "register": {
     "logIn": "Log in",
     "email": "Email",
@@ -69,19 +93,7 @@
     "submit": "Register",
     "chooseYourCountry": "Choose your country",
     "searchCountry": "Search country",
-    "invalidDeliveryVolume": "Field is not a valid delivery volume.",
-    "ES": "Spain",
-    "DE": "Germany",
-    "FR": "France",
-    "IT": "Italy",
-    "AT": "Austria",
-    "NL": "Netherlands",
-    "BE": "Belgium",
-    "PT": "Portugal",
-    "TR": "Turkey",
-    "IE": "Ireland",
-    "GB": "Great Britain",
-    "HU": "Hungary"
+    "invalidDeliveryVolume": "Field is not a valid delivery volume."
   },
   "onboardingWelcome": {
     "header": "Let's set up basic information so that you can make shipments",
