--- a/src/BusinessLogic/Resources/lang/es.json
+++ b/src/BusinessLogic/Resources/lang/es.json
@@ -54,6 +54,30 @@
     "chooseYourCountry": "Elige tu país para comenzar el registro",
     "registerMe": "Registrarme"
   },
+  "countries": {
+    "ES": "España",
+    "DE": "Alemania",
+    "FR": "Francia",
+    "IT": "Italia",
+    "AT": "Austria",
+    "NL": "Países Bajos",
+    "BE": "Bélgica",
+    "PT": "Portugal",
+    "TR": "Turquía",
+    "IE": "Irlanda",
+    "GB": "Reino Unido",
+    "HU": "Hungría",
+    "PL": "Polonia",
+    "CH": "Suiza",
+    "LU": "Luxemburgo",
+    "AR": "Argentina",
+    "US": "Estados Unidos",
+    "BO": "Bolivia",
+    "MX": "México",
+    "CL": "Chile",
+    "CZ": "Republica checa",
+    "SE": "Suecia"
+  },
   "register": {
     "logIn": "Iniciar sesión",
     "email": "Correo electrónico",
@@ -69,19 +93,7 @@
     "submit": "Regístrate",
     "chooseYourCountry": "Elige tu país",
     "searchCountry": "Busca el país",
-    "invalidDeliveryVolume": "El campo no contiene un volumen de entrega válido.",
-    "ES": "España",
-    "DE": "Alemania",
-    "FR": "Francia",
-    "IT": "Italia",
-    "AT": "Austria",
-    "NL": "Netherlands",
-    "BE": "Belgium",
-    "PT": "Portugal",
-    "TR": "Turkey",
-    "IE": "Irlanda",
-    "GB": "Great Britain",
-    "HU": "Hungary"
+    "invalidDeliveryVolume": "El campo no contiene un volumen de entrega válido."
   },
   "onboardingWelcome": {
     "header": "Vamos a configurar tu información básica para poder hacer envíos",
