--- a/src/BusinessLogic/Resources/lang/fr.json
+++ b/src/BusinessLogic/Resources/lang/fr.json
@@ -54,6 +54,30 @@
     "chooseYourCountry": "Sélectionnez votre pays pour commencer votre inscription",
     "registerMe": "S’inscrire"
   },
+  "countries": {
+    "ES": "Espagne",
+    "DE": "Allemagne",
+    "FR": "France",
+    "IT": "Italie",
+    "AT": "Autriche",
+    "NL": "Pays-Bas",
+    "BE": "Belgique",
+    "PT": "Portugal",
+    "TR": "Turquie",
+    "IE": "Irlande",
+    "GB": "Royaume-Uni",
+    "HU": "Hongrie",
+    "PL": "Pologne",
+    "CH": "Suisse",
+    "LU": "Luxembourg",
+    "AR": "Argentine",
+    "US": "États Unis",
+    "BO": "Bolivie",
+    "MX": "Mexique",
+    "CL": "Chili",
+    "CZ": "République Tchèque",
+    "SE": "Suède"
+  },
   "register": {
     "logIn": "Se connecter",
     "email": "Adresse électronique",
@@ -69,19 +93,7 @@
     "submit": "S'inscrire",
     "chooseYourCountry": "Sélectionnez votre pays",
     "searchCountry": "Rechercher un pays",
-    "invalidDeliveryVolume": "Le champ ne contient pas de volume de livraison valide.",
-    "ES": "Spain",
-    "DE": "Germany",
-    "FR": "France",
-    "IT": "Italy",
-    "AT": "Austria",
-    "NL": "Netherlands",
-    "BE": "Belgium",
-    "PT": "Portugal",
-    "TR": "Turkey",
-    "IE": "Ireland",
-    "GB": "Great Britain",
-    "HU": "Hungary"
+    "invalidDeliveryVolume": "Le champ ne contient pas de volume de livraison valide."
   },
   "onboardingWelcome": {
     "header": "Configurez vos informations de base afin d’effectuer des envois",
