--- a/src/BusinessLogic/Resources/lang/it.json
+++ b/src/BusinessLogic/Resources/lang/it.json
@@ -54,6 +54,30 @@
     "chooseYourCountry": "Per iniziare la registrazione, scegli il tuo paese",
     "registerMe": "Iscriviti"
   },
+  "countries": {
+    "ES": "Spagna",
+    "DE": "Germania",
+    "FR": "Francia",
+    "IT": "Italia",
+    "AT": "Austria",
+    "NL": "Paesi Bassi",
+    "BE": "Belgio",
+    "PT": "Portogallo",
+    "TR": "Turchia",
+    "IE": "Irlanda",
+    "GB": "Regno Unito",
+    "HU": "Ungheria",
+    "PL": "Polonia",
+    "CH": "Svizzera",
+    "LU": "Lussemburgo",
+    "AR": "Argentina",
+    "US": "Stati Uniti",
+    "BO": "Bolivia",
+    "MX": "Messico",
+    "CL": "Chile",
+    "CZ": "Repubblica Ceca",
+    "SE": "Svezia"
+  },
   "register": {
     "logIn": "Accedi",
     "email": "Email",
@@ -69,19 +93,7 @@
     "submit": "Registrati",
     "chooseYourCountry": "Scegli il paese",
     "searchCountry": "Cerca paese",
-    "invalidDeliveryVolume": "Il campo non contiene un volume di consegna valido.",
-    "ES": "Spain",
-    "DE": "Germany",
-    "FR": "France",
-    "IT": "Italy",
-    "AT": "Austria",
-    "NL": "Netherlands",
-    "BE": "Belgium",
-    "PT": "Portugal",
-    "TR": "Turkey",
-    "IE": "Ireland",
-    "GB": "Great Britain",
-    "HU": "Hungary"
+    "invalidDeliveryVolume": "Il campo non contiene un volume di consegna valido."
   },
   "onboardingWelcome": {
     "header": "È necessario impostare alcuni dati di base così che potrai effettuare spedizioni",
